added more versions and github publish.

--- a/CloudConvert.Test/CloudConvert.Test.csproj
+++ b/CloudConvert.Test/CloudConvert.Test.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net461;netcoreapp3.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>net451;net452;net461;net472;net48;netcoreapp2.1;netcoreapp2.2;netcoreapp3.0;netcoreapp3.1;net5.0;net6.0;</TargetFrameworks>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
