--- a/CloudConvert.API/CloudConvert.API.csproj
+++ b/CloudConvert.API/CloudConvert.API.csproj
@@ -1,14 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net461;netstandard2.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>
+        net6.0;net451;net452;net461;net472;net48;netstandard2.0;netstandard2.1;netcoreapp2.1;netcoreapp2.2;netcoreapp3.0;netcoreapp3.1;net5.0;
+    </TargetFrameworks>
     <AssemblyName>CloudConvert.API</AssemblyName>
     <RootNamespace>CloudConvert.API</RootNamespace>
     <Description>Official SDK for the CloudConvert API</Description>
-    <Version>1.2.0</Version>
-    <PackageProjectUrl>https://github.com/cloudconvert/cloudconvert-dotnet</PackageProjectUrl>
+    <Version>1.2.0-SPDBUILD</Version>
+    <PackageProjectUrl>https://github.com/Sharp-Point-Data/cloudconvert-dotnet</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Sharp-Point-Data/cloudconvert-dotnet</RepositoryUrl>
+      <RepositoryType>git</RepositoryType>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <IsPackable>true</IsPackable>
   </PropertyGroup>
 
