--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,6 @@ jobs:
       run: dotnet pack --no-restore --output .\NugetPackages
 
     - name: Publish Nuget to GitHub registry
-      run: dotnet nuget push /home/runner/work/cloudconvert-dotnet/cloudconvert-dotnet/.NugetPackages/CloudConvert.API.*.nupkg -k ${GITHUB_TOKEN} -s https://nuget.pkg.github.com/Sharp-Point-Data/index.json --skip-duplicate --no-symbols 1
+      run: dotnet nuget push /home/runner/work/cloudconvert-dotnet/cloudconvert-dotnet/.NugetPackages/SPD.CloudConvert.API.*.nupkg -k ${GITHUB_TOKEN} -s https://nuget.pkg.github.com/Sharp-Point-Data/index.json --skip-duplicate --no-symbols 1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
