--- a/CloudConvert.API/CloudConvert.API.csproj
+++ b/CloudConvert.API/CloudConvert.API.csproj
@@ -4,10 +4,10 @@
     <TargetFrameworks>
         net6.0;net451;net452;net461;net472;net48;netstandard2.0;netstandard2.1;netcoreapp2.1;netcoreapp2.2;netcoreapp3.0;netcoreapp3.1;net5.0;
     </TargetFrameworks>
-    <AssemblyName>CloudConvert.API</AssemblyName>
-    <RootNamespace>CloudConvert.API</RootNamespace>
-    <Description>Official SDK for the CloudConvert API</Description>
-    <Version>1.0.2-SPDBUILD</Version>
+    <AssemblyName>SPD.CloudConvert.API</AssemblyName>
+    <RootNamespace>SPD.CloudConvert.API</RootNamespace>
+    <Description>SPD rework of Official SDK for the CloudConvert API</Description>
+    <Version>1.0.0</Version>
     <PackageProjectUrl>https://github.com/Sharp-Point-Data/cloudconvert-dotnet</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Sharp-Point-Data/cloudconvert-dotnet</RepositoryUrl>
       <RepositoryType>git</RepositoryType>
